mdapi/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Address1City__c</fullName>
        <label>Address 1: City</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address1CountryRegion__c</fullName>
        <label>Address 1: Country/Region</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address1StateProvince__c</fullName>
        <label>Address 1: State/Province</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address1Street1__c</fullName>
        <label>Address 1: Street 1</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address1Street2__c</fullName>
        <label>Address 1: Street 2</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address1Street3__c</fullName>
        <label>Address 1: Street 3</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address1ZIPPostalCode__c</fullName>
        <label>Address 1: ZIP/Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <label>Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactNo__c</fullName>
        <label>Contact No.</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactRole__c</fullName>
        <label>Contact Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Primary</fullName>
                </value>
                <value>
                    <fullName>Billing</fullName>
                </value>
                <value>
                    <fullName>Owner</fullName>
                </value>
                <value>
                    <fullName>Executive</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Technical</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DoNotAllowBulkEmails__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do not allow Bulk E-mails</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DoNotAllowEmails__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do not allow E-mails</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DoNotAllowFaxes__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do not allow Faxes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Duplicate_Parent_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Duplicate Parent Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EmailAddress2__c</fullName>
        <externalId>true</externalId>
        <label>E-mail Address 2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>EmailAddress3__c</fullName>
        <externalId>true</externalId>
        <label>E-mail Address 3</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Form_Name__c</fullName>
        <description>NO LONGER USED</description>
        <label>Form Name*</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JobTitle__c</fullName>
        <label>Job Title</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastActivity__c</fullName>
        <label>Last Activity</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LastAppointment__c</fullName>
        <label>Last Appointment</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LastCall__c</fullName>
        <label>Last Call</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LastEmail__c</fullName>
        <label>Last Email</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LeadOwner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Merge_Status__c</fullName>
        <label>Merge Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Merged</fullName>
                </value>
                <value>
                    <fullName>Failed to Merge</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OrphanedLead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Orphaned Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>OrphanedContacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PartnerPassword__c</fullName>
        <label>Partner Password</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PartnerUsername__c</fullName>
        <label>Partner Username</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PreferredMethodOfContact__c</fullName>
        <label>Preferred Method of Contact</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Any</fullName>
                </value>
                <value>
                    <fullName>E-mail</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Fax</fullName>
                </value>
                <value>
                    <fullName>Mail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SendMarketingMaterials__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Marketing Materials</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Orphaned</fullName>
                </value>
                <value>
                    <fullName>Left The Company</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UserType__c</fullName>
        <label>User Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Home User</fullName>
                </value>
                <value>
                    <fullName>Business User</fullName>
                </value>
                <value>
                    <fullName>Managed Service Provider (MSP)</fullName>
                </value>
                <value>
                    <fullName>Value Added Reseller (VAR)</fullName>
                </value>
                <value>
                    <fullName>Both MSP and VAR</fullName>
                </value>
                <value>
                    <fullName>Original Equipment Manufacturer (OEM)</fullName>
                </value>
                <value>
                    <fullName>Direct Market Reseller (DMR)</fullName>
                </value>
                <value>
                    <fullName>Press / Media Evaluator</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Alliance Partner</fullName>
                </value>
                <value>
                    <fullName>Distributors Partner Reseller</fullName>
                </value>
                <value>
                    <fullName>CP</fullName>
                </value>
                <value>
                    <fullName>Strategic</fullName>
                </value>
                <value>
                    <fullName>Trial User</fullName>
                </value>
                <value>
                    <fullName>Distribution Partner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VAR_Agreement_Accepted_Date__c</fullName>
        <description>The date the Contact accepted the VAR Agreement</description>
        <label>VAR Agreement Accepted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>VAR_Agreement_Accepted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Has the Contact accepted the VAR Agreement?</description>
        <label>VAR Agreement Accepted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VAR_Agreement_Version__c</fullName>
        <description>The version of the VAR Agreement accepted</description>
        <label>VAR Agreement Version</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WebSite__c</fullName>
        <label>Web Site</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>leadFormName__c</fullName>
        <description>Existing field of TEXT(255). Repurposed for JIRA SSF-34
JIRA SSF-34: copied from Lead upon conversion to Opportunity</description>
        <label>Form Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>leadSourceCampaign__c</fullName>
        <description>JIRA SSF-34: copied from Lead upon conversion to Opportunity</description>
        <label>Source Campaign</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto71_Acquisition_Date__c</fullName>
        <label>Acquisition Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>mkto71_Acquisition_Program__c</fullName>
        <label>Acquisition Program</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto71_Lead_Score__c</fullName>
        <label>Lead Score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>